[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/art/canons/canon.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Canon.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/CanonGun.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "bottom"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteCanon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteCanon:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanonGun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 46 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanonGun:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "bottom-left"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteCanon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteCanon:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanonGun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 46 ), Vector2( -34, 35 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanonGun:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 45.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "bottom-right"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteCanon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteCanon:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanonGun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 46 ), Vector2( 35, 34 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanonGun:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -45.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "left-bottom"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteCanon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteCanon:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 45.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanonGun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -34, 35 ), Vector2( 0, 46 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanonGun:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 45.0, 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "right-bottom"
tracks/0/type = "value"
tracks/0/path = NodePath("SpriteCanon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SpriteCanon:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -45.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CanonGun:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 35, 34 ), Vector2( 0, 46 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CanonGun:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -45.0, 0.0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "stop"

[node name="Canon" type="Node2D"]
script = ExtResource( 2 )

[node name="CanonGun" type="Position2D" parent="."]
position = Vector2( 0, 46 )
scale = Vector2( 5, 5 )
script = ExtResource( 3 )

[node name="SpriteCanon" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "bottom"
anims/bottom = SubResource( 1 )
anims/bottom-left = SubResource( 4 )
anims/bottom-right = SubResource( 2 )
anims/left-bottom = SubResource( 5 )
anims/right-bottom = SubResource( 3 )
anims/stop = SubResource( 6 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.999999, -18 )
scale = Vector2( 2.9, 2.4 )

[node name="Area2Left" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2Left"]
polygon = PoolVector2Array( -65, 0, -147, 256, -549, 261 )

[node name="Area2Center" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2Center"]
position = Vector2( 121, 3 )
polygon = PoolVector2Array( -69, -2, -2, 253, -265, 253, -183, -2 )

[node name="Area2Right" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2Right"]
position = Vector2( 262, 3 )
polygon = PoolVector2Array( -206, -2, 347, 255, -140, 253, -207, -2 )

[node name="MissileTimer" type="Timer" parent="."]

[node name="FireSound" type="AudioStreamPlayer" parent="."]
volume_db = -4.953

[connection signal="body_entered" from="Area2Left" to="." method="_on_Area2Left_body_entered"]
[connection signal="body_entered" from="Area2Center" to="." method="_on_Area2Center_body_entered"]
[connection signal="body_entered" from="Area2Right" to="." method="_on_Area2Right_body_entered"]
[connection signal="body_exited" from="Area2Right" to="." method="_on_Area2Right_body_exited"]
[connection signal="timeout" from="MissileTimer" to="." method="_on_MissileTimer_timeout"]
